# sks-trainer

./: Cargo.toml
src/: args.rs  config.rs  datastore.rs  main.rs  model.rs  questions.json
src/sql/: 01_schema.sql
